--- a/1_multi_test_corrertions/multi_test_corrertions.ipynb
+++ b/1_multi_test_corrertions/multi_test_corrertions.ipynb
@@ -2,15 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2026-02-18T12:45:48.334005700Z",
+     "start_time": "2026-02-18T12:45:48.077719700Z"
+    }
    },
-   "outputs": [],
    "source": [
-    ""
-   ]
+    "import numpy as np\n",
+    "import pandas as pd"
+   ],
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "2416a5c830a56cb4"
   }
  ],
  "metadata": {
