--- a/1_multi_test_corrertions/multi_test_corrertions.ipynb
+++ b/1_multi_test_corrertions/multi_test_corrertions.ipynb
@@ -1,29 +1,34 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2026-02-18T12:45:48.334005700Z",
-     "start_time": "2026-02-18T12:45:48.077719700Z"
-    }
-   },
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd"
-   ],
-   "outputs": [],
-   "execution_count": 1
+    "# Multiple testing corrections demo\n",
+    "Мини-демонстрация корректировок p-value для финальных метрик."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "2416a5c830a56cb4"
+   "metadata": {},
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Bonferroni threshold for 5 tests: 0.0100\nRaw p-values: [0.01, 0.03, 0.2, 0.8, 0.04]\nRejected with Bonferroni: [False, False, False, False, False]\n"
+    }
+   ],
+   "source": [
+    "from math import comb\n",
+    "\n",
+    "alpha = 0.05\n",
+    "m = 5\n",
+    "print(f'Bonferroni threshold for {m} tests: {alpha/m:.4f}')\n",
+    "pvals = [0.01, 0.03, 0.2, 0.8, 0.04]\n",
+    "print('Raw p-values:', pvals)\n",
+    "print('Rejected with Bonferroni:', [p < alpha/m for p in pvals])"
+   ]
   }
  ],
  "metadata": {
@@ -33,16 +38,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3"
   }
  },
  "nbformat": 4,
